=all code Project

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,226 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>This is Project Learn Css</title>
   </head>
   <body>
+    <div class="wrapper color-white border-b">
+      <div class="container">
+        <nav id="menu">
+          <img src="./images/logo.png" alt="Logo">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
-<script defer src="/__/firebase/7.19.1/firebase-storage.js"></script>
-<script src="/__/firebase/7.19.1/firebase-app.js"></script>
-<script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
-<script src="/__/firebase/init.js"></script>
+    <div class="wrapper color-gray">
+      <div class="banner2">
+      <div class="container">
+        <div id="banner">
+          <div class="text-banner">
+            <h1>Start your business</h1>
+            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos. Mazim nemore singulis an ius, nullam ornatus nam ei.</p>
+            <input type="button" value="Sign up">
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <div class="wrapper color-white">
+      <div class="container">
+        <div class="content">
+          <div class="title">
+            <h1>Company Values</h1>
+            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos.</p>
+          </div>
+
+          <div class="box-2cl">
+            <div class="box">
+              <img src="https://picsum.photos/200/300?random=1">
+              <div class="text">
+                <h2>Quality</h2>
+                <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi nihil tantas platonem eos.</p>
+              </div>
+            </div>
+
+            <div class="box">
+              <img src="https://picsum.photos/200/300?random=2">
+              <div class="text">
+                <h2>Quality</h2>
+                <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi nihil tantas platonem eos.</p>
+              </div>
+            </div>
+
+            <div class="box">
+              <img src="https://picsum.photos/200/300?random=3">
+              <div class="text">
+                <h2>Quality</h2>
+                <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi nihil tantas platonem eos.</p>
+              </div>
+            </div>
+
+            <div class="box">
+              <img src="https://picsum.photos/200/300?random=4">
+              <div class="text">
+                <h2>Quality</h2>
+                <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi nihil tantas platonem eos.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="title">
+            <h1>Our work</h1>
+            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos.</p>
+          </div>
+          
+          <ul class="menu2">
+            <li><a href="#">All</a></li>
+            <li><a href="#">Life</a></li>
+            <li><a href="#">Moments</a></li>
+            <li><a href="#">Nature</a></li>
+            <li><a href="#">Stories</a></li>
+            <li><a href="#">Travel</a></li>
+          </ul>
+
+          <div class="box-2cl">
+            <div class="boxLarge">
+              <img src="https://picsum.photos/570/384?random=5">
+              <div class="text">
+                <h2>Minimalism in Architecture</h2>
+                <p>Nature</p>
+              </div>
+            </div>
+
+            <div class="boxLarge">
+              <img src="https://picsum.photos/570/384?random=6">
+              <div class="text">
+                <h2>Minimalism in Architecture</h2>
+                <p>Nature</p>
+              </div>
+            </div>
+
+            <div class="boxLarge">
+              <img src="https://picsum.photos/570/384?random=7">
+              <div class="text">
+                <h2>Minimalism in Architecture</h2>
+                <p>Nature</p>
+              </div>
+            </div>
+
+            <div class="boxLarge">
+              <img src="https://picsum.photos/570/384?random=8">
+              <div class="text">
+                <h2>Minimalism in Architecture</h2>
+                <p>Nature</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="title">
+            <h1>Testimonials</h1>
+            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos.</p>
+          </div>
+
+          <div class="box-1cl">
+            <img src="https://picsum.photos/200/200?random=9">
+            <div class="text">
+              <h4>"Et vim graeco principes. Cu dico nullam pri. Duo stet possim quaerendum eu, cum in invenire platonem animal assentior nam, sed qualisque deterruisset melius erroribus intellegebat, sed dico apeirian ei."</h4>
+              <h2>Amelia Edwards</h2>
+              <p>Google Inc</p>
+            </div>
+          </div>
+
+          <div class="title">
+            <h1>Our plans</h1>
+            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos.</p>
+          </div>
+
+          <div class="box-2cl">
+            <div class="box2">
+              <h3>$9</h3>
+              <h2>Simple plan</h2>
+              <p>Nam natum volutpat elitr vel qui purto dicit, bonorum minimum tation homero, at per assum dicit verterem.</p>
+            </div>
+            <div class="box2">
+              <h3>$24</h3>
+              <h2>Professional plan</h2>
+              <p>Lorem deterruisset ea vis, usu eu hinc lorem inciderint, et mel solum autem molestiae mazim feugait electram an.</p>
+            </div>
+          </div>
+
+          <div class="title">
+            <h1>Our blog</h1>
+            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos.</p>
+          </div>
+
+          <div class="box-2cl-2ro">
+            <div class="box3">
+              <img src="https://picsum.photos/200/200?random=10">
+              <div class="text">
+                <h2>Future of customer support</h2>
+                  <h4>Ainara Vergara</h4><span>20 august 2019</span>
+                <p>Similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos. </p>
+              </div>
+            </div>
+
+            <div class="box3">
+              <img src="https://picsum.photos/200/200?random=11">
+              <div class="text">
+                <h2>Get you started</h2>
+                  <h4>Salma Fonseca</h4><span>19 august 2019</span>
+                <p>Ea eos essent ornatus percipit, mea an persecuti pertinacia, te suas semper per.</p>
+              </div>
+            </div>
+
+            <div class="box3">
+              <img src="https://picsum.photos/200/200?random=12">
+              <div class="text">
+                <h2>Future of customer support</h2>
+                  <h4>Ainara Vergara</h4><span>20 august 2019</span>
+                <p>Similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos. </p>
+              </div>
+            </div>
+
+            <div class="box3">
+              <img src="https://picsum.photos/200/200?random=13">
+              <div class="text">
+                <h2>Future of customer support</h2>
+                  <h4>Ainara Vergara</h4><span>20 august 2019</span>
+                <p>Similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos. </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="title">
+            <h1>Free consultation</h1>
+            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos.</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper color-gray">
+      <div class="container">
+        <footer>
+          <img src="./images/logo.png" alt="Logo">
+          <p>© Copyright 2020. HuyNT</p>
+        </footer>
+      </div>
+    </div>
+  <!-- script here -->
+  <script defer src="/__/firebase/7.19.1/firebase-storage.js"></script>
+  <script src="/__/firebase/7.19.1/firebase-app.js"></script>
+  <script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
+  <script src="/__/firebase/init.js"></script>
   </body>
 </html>
