Update HTML slider

--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,23 @@
 
     <div class="wrapper color-gray">
       <div class="banner2">
-      <div class="container">
-        <div id="banner">
-          <div class="text-banner">
-            <h1>Start your business</h1>
-            <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos. Mazim nemore singulis an ius, nullam ornatus nam ei.</p>
-            <input type="button" value="Sign up">
+        <div class="back btnBanner">&#10094</div>
+        <div class="container">
+          <div id="banner">
+            <div class="text-banner">
+              <h1>Start your business</h1>
+              <p>Quidam officiis similique sea ei, vel tollit indoctum efficiendi ei, at nihil tantas platonem eos. Mazim nemore singulis an ius, nullam ornatus nam ei.</p>
+              <input type="button" value="Sign up">
+            </div>
+          </div>
+          <div style="text-align: center; margin-bottom: 10px;">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
           </div>
         </div>
-      </div>
+        
+        <div class="next btnBanner">&#10095</div>
       </div>
     </div>
 
@@ -224,5 +232,6 @@
   <script src="/__/firebase/7.19.1/firebase-app.js"></script>
   <script src="/__/firebase/7.19.1/firebase-analytics.js"></script>
   <script src="/__/firebase/init.js"></script>
+  <script src="./js/slider.js"></script>
   </body>
 </html>
